--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@ body{
     padding-left: 10px;
     padding-right: 10px;
 }
+.title{
+    font-family: 'spaceagecyrillic';
+    padding: 100px 0;
+    font-size: 48px;
+    line-height: 48px;
+    font-weight: 400;
+}
 .header{
     background-image: url(../images/header-bg.jpg);
     background-repeat: no-repeat;
@@ -137,4 +144,93 @@ body{
 }
 .header__description-text + .header__description-text{
     margin-left: 52px;
+}
+.about{
+    background-image: url(../images/about_bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.about__item{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 150px;
+}
+.about__item:nth-child(odd){
+    flex-direction: row-reverse;
+}
+
+.about__img{
+    max-width: 100%;
+}
+.about__content{
+    width: 600px;
+}
+.about__content-title{
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.about__content-subtitle{
+    color: #036CCA;
+    font-size: 12px;
+    line-height: 14px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+.about__content-text{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+.about__content-text p{
+    width: 165px;
+    
+}
+.about__table {
+    margin-bottom: 50px;
+}
+.table__caption {
+}
+.about__table-tr {
+    border: 1px solid #fff;
+    border-left: none;
+    border-right: none;
+}
+.about__table-td {
+    padding: 10px 30px 10px 0;
+}
+.about__table-tr+.about__table-tr{
+    font-size: 36px;
+    line-height: 43px;
+    font-weight: bold;
+    text-align: center;
+}
+.about__table-td span{
+    font-size: 14px;
+    line-height: 17px;
+    display: block;
+}
+.button{     
+        padding: 20px 45px 20px 45px;
+        border: 1px solid #fff;
+        font-size: 18px;
+        line-height: 21px;
+        text-transform: uppercase;
+    }
+.about__table-caption{
+    caption-side: bottom;
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 12px;
+    line-height: 14px;
+}
+.how-to{
+    background-image: url(../images/how-to-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding-bottom: 100px;
 }
