--- a/css/style.css
+++ b/css/style.css
@@ -234,3 +234,52 @@ body{
     background-size: cover;
     padding-bottom: 100px;
 }
+.how-to__box{
+    text-align: center;
+}
+.how-to__box circle,
+.how-to__box text,
+.how-to__box foreignObject{
+    transition: all .5s;
+    cursor: pointer;
+    font-size: 18px;
+}
+.how-to__box g:hover circle{
+    r: 20px;
+    fill: #036CCA;
+}
+.how-to__box g:hover text{
+    fill: #036CCA;
+    font-size: 36px;
+}
+.how-to__box g:hover foreignObject{
+    color: #036CCA;
+    font-size: 22px;
+}
+foreignObject{
+    text-align: left;
+}
+.to-book {
+    background-image: url(../images/how-to-bg.jpg);
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
+.to-book__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.to-book__text{
+    width: 165px;
+    font-size: 14px;
+    line-height: 17px;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: 52px;
+}
+to-book__text +.to-book__text{
+    margin-right: 0;
+    margin-left: 0;
+
+} 
