--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ body{
     line-height: 14px;
 }
 .how-to{
-    background-image: url(../images/how-to-bg.jpg);
+    background-image: url(../images/how-to_bg.jpg);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
@@ -260,7 +260,7 @@ foreignObject{
     text-align: left;
 }
 .to-book {
-    background-image: url(../images/how-to-bg.jpg);
+    background-image: url(../images/to-book_bg.jpg);
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -281,5 +281,149 @@ foreignObject{
 to-book__text +.to-book__text{
     margin-right: 0;
     margin-left: 0;
-
 } 
+.info{
+    background-image: url(../images/info_bg.jpg);
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    padding-bottom: 100px;
+}
+.special-offer__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.special-offer__item{
+    width: 500px;
+}
+.special-offer__item-box{
+    border: 1px solid #fff;
+    padding: 40px 75px;
+    margin-bottom: 25px;
+    text-align: center;
+    min-height: 400px;  
+    display: flex;flex-direction: column;
+    justify-content: space-between;
+}
+.special-offer__item-text{
+    font-size: 24px;
+    line-height: 29px;
+    width: 236px;
+    margin: 0 auto;
+}
+.special-offer__item-text span{
+    color: #CB0E0E;
+}
+.special-offer__old-price{
+    text-align: right;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 16px;
+    position: relative;
+ 
+}
+.special-offer__old-price::before{
+    content: '';
+    display: block;
+    height: 1px;
+    width: 68px;
+    background-color: #CB0E0E;
+    position: absolute;
+    top: 7px;
+    right: 0;
+    transform: rotate(15deg);
+
+}
+.special-offer__new-price{
+    font-size: 48px;
+    line-height: 57px;
+}
+.special-offer__btn{
+    width: 100%;
+}
+.services{
+    margin-bottom: 200px;
+}
+.services__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.services__box-list{
+    width: 620px;
+    margin-right: 80px;
+    font-size: 24px;
+    line-height: 29px;
+}
+.services__list-title {   
+    margin-bottom: 25px;
+}
+.services__list{
+    list-style: none;
+    margin-bottom: 25px;
+}
+.services__list-item {
+    padding-left: 36px;
+    position: relative;
+}
+.services__list-item::before{
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    left: 0;
+    top: 4px;
+}
+.services__description{
+    font-size: 12px;
+    line-height: 14px;
+}
+.services__buttons{
+    width: 500px;
+}
+.services__btn{
+    width: 100%;
+}
+.services__btn--first{
+    margin-bottom: 50px;
+    position: relative;
+}
+.services__btn--first::before{
+    content:'';
+    position: absolute;
+    right: 0;
+    bottom: 43px;
+    background-image: url(../images/photo.png);
+    width: 192px;
+    height: 150px;
+}
+.slider{
+    text-align: center;  
+    
+}
+.slider__inner{
+    border: 1px solid #fff;
+    padding: 100px 0;
+    margin-bottom: 50px; 
+}
+.slider__description{
+   font-family: 'spaceagecyrillic';
+   font-size: 24px;
+   line-height: 30px;
+}
+.slider__box-img{
+    margin: 0 auto;
+}
+.slider__arrow{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+}
+.slider__arrow-left{
+    left:75px;
+}
+.slider__arrow-right{
+   right:75px;
+}
