--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,31 @@ body{
     color: #036CCA;
     font-size: 22px;
 }
+.how-to__box-list{
+    display: none;
+    list-style: none;
+}
+.how-to__box-list-item{
+    padding-bottom: 30px;
+    text-align: left;
+    padding-left: 20px;
+    margin-left: 20px;
+    position: relative;
+    border-left: 1px solid #fff;
+}
+.how-to__box-list-item::before{
+    content: '';
+    position: absolute;
+    left: -10px;
+    top: 0px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+.how-to__box-list-item:last-child{
+    border:none;
+}
 foreignObject{
     text-align: left;
 }
@@ -575,9 +600,37 @@ to-book__text +.to-book__text{
         width: 100%;
     }
 }
+@media(max-width:1050px) {
+    .special-offer__inner{
+        display: block;
+    }
+    .special-offer__item{
+        width: 100%;
+    }
+    .special-offer__btn{
+        margin-bottom: 20px;
+    }
+    .contacts__inner{
+        display: block;
+    }
+    .contacts__box{
+        width: 100%;
+    }
+    .contacts__guarantees{
+    margin: 0 auto;
+    }
+}
+    
 @media(max-width:1024px){
     .login{
         margin-right: 0;
+    }
+    .to-book__inner{
+        display: block;
+    }
+    .to-book__text{
+        width: 100%;
+        margin: 0 0 20px;
     }
    
 
@@ -627,9 +680,48 @@ to-book__text +.to-book__text{
    .header{
        background-position: center right;
    }
+   .how-to__box svg{
+       display: none;
+   }
+   .how-to__box-list{
+       display: block;
+   }
+   .services__inner{
+       display: block;
+   }
+   .services__box-list{
+       width: 100%;
+       margin-bottom: 170px;
+       margin-right: 0;
+   }
+.services__buttons{
+    max-width: 500;
+    width: auto;
+    margin: 0 auto;
+}
+.slider__box-img{
+    max-width: 100%;
+}
 
 }
-@media(max-width:620px){
+
+@media(max-width: 720px){
+    .services{
+        padding-bottom: 50px;
+    }
+    .slider__inner{
+        padding: 0;
+    }
+    .services__description{
+        font-size: 15px;
+        line-height: 24px;
+    }
+    .info{
+        padding-bottom: 50px;
+
+    }
+}
+@media(max-width:640px){
     .header__content{
         text-align: center;
     }
@@ -689,8 +781,79 @@ to-book__text +.to-book__text{
         content: attr(area-label);
         float: left;
     }
-    
+    .to-book{
+        background-position: top left;
+    }
+    .contacts__guarantees{
+        width: 100%;
+    }
+    .contacts__guarantees-img{
+        width: 100%;
+    }
+    .services__title{
+        font-size: 35px;
+    }
+    .footer{
+        text-align: center;
+        padding-bottom: 100px;
+    }
 }
+
+@media(max-width:570px){
+    .footer__inner{
+        display: block;
+    }
+    .footer__text{
+        width: 100%;
+        margin-right: 0;
+    }
+    .footer__text p+p{
+        margin-bottom: 30px;
+        margin-top: 10px;
+    }
+    .footer__menu,
+    .footer__links{
+        margin-right: 0;
+        width: 100%;
+    }
+    .footer__menu{
+        margin-bottom: 50px;
+    }
+}
+
+@media(max-width:480px){
+    .title{
+        font-size: 28px;
+        line-height: 28px;
+    }
+    .special-offer__new-price{
+        font-size: 34px;
+        line-height: 44px;
+    }
+    .services__box-list{
+        font-size: 18px;
+        line-height: 26px;
+    }
+    .special-offer__item-box{
+        padding: 20px 10px;
+    }
+    .services__title,
+    .to-book__title{
+        font-size: 23px;
+    }   
+    .contacts__guarantees-text{
+        font-size: 20px;
+        line-height: 26px;
+    }
+}
+@media(max-width: 375px){
+    .services__btn--first::before{
+        bottom:63px;
+    }
+}
+
+
+
 @media(max-width: 360px){
     .header__top{
         flex-wrap: wrap;
